--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,10 +1,8 @@
 <h1><%= @artist.name %> </h1>
+<h3><%= pluralize(@artist.song_count, 'songs')%></h3>
 
-<% @artist.songs.each do |s| %>
-    <%= link_to s.title, song_path(s) %>
-    <% end %>
-    
 <ul>
-    <ol>
-    </ol>
+<% @artist.songs.each do |s| %>
+    <li><%= link_to s.title, song_path(s) %></li>
+    <% end %>
 </ul>
