--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,7 +1,11 @@
+<h1> Song Index </h1>
 
-
-
-<% @songs.each do |s|%>
-    <%= link_to s.title, song_path(s) %>
-    <%= s.artist.name "-" s.title %>
+<ul>
+    <% @songs.each do |s|%>
+        <li>
+            <a href="<%= song_path(s)%>">
+                <%= s.artist_name %> - <%= s.title %>
+            </a>
+        </li>
     <% end %>
+</ul>
