--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,4 +1,5 @@
 <h1> Songs Show </h1>
 
+<h3><%= link_to @song.artist_name, @song.artist %></h3>
 
-<a href="/artist/<%=@song.artist_id>">@artist.name</a>
+<p><%= @song.title%></p> 
